--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to Pages
 
 on:
   push:
-    branches: ["needle-cloud"]
+    branches: ["cloud-build"]
 
   workflow_dispatch:
 
